--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,32 @@
 body {
     margin: 0;
     padding: 0;
-    background: center / cover url("assets/skulls.png");
+}
+
+.wallpaper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: center url("assets/skulls.png");
 }
 
 .centered {
     position: relative;
-    width: 100%;
-    height: 100%;
     text-align: center;
+    width: 100%;
 }
 
 .centered * {
-    color: green;
+    color: #C4122E;
+}
+
+.centered img {
+    width: 30%;
+    background-color: white;
+    border: inset #C4122E;
 }
 
 .centered a {
-    color: blue;
+    color: white;
+    font-weight: bold;
 }
