--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
 
 .centered * {
     color: #C4122E;
+    text-shadow: white 1px 0 10px;
 }
 
 .centered img {
@@ -27,6 +28,5 @@ body {
 }
 
 .centered a {
-    color: white;
     font-weight: bold;
 }
