--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: center url("assets/skulls.png");
+    background: center url("assets/goat.png");
+    background-size: 10%;
 }
 
 .centered {
