--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: center url("assets/goat.png");
+    background: center url("https://cdn.discordapp.com/attachments/1095086121450475591/1100513640433590342/image.png");
     background-size: 10%;
 }
 
